packages/llvm/src/tests/variable_declaration/snapshots/llvm__tests__variable_declaration__let_variable_declaration__const _x = 1const _x = 1            let x  = (_x);            x = (_x);            .snap
---
source: packages/llvm/src/tests/variable_declaration/let_variable_declaration.rs
expression: output

---
; ModuleID = 'main'
source_filename = "main"

define void @main() {
entry:
  %_x = alloca double, align 8
  store double 1.000000e+00, double* %_x, align 8
  %_x1 = alloca double, align 8
  store double 1.000000e+00, double* %_x1, align 8
  %x = alloca double, align 8
  %"2" = load double, double* %_x1, align 8
  store double %"2", double* %x, align 8
  %"3" = load double, double* %_x1, align 8
  store double %"3", double* %x, align 8
  ret void
}

